--- a/resources/content/src/blog/modules/home/components/home-page/home-page.component.html
+++ b/resources/content/src/blog/modules/home/components/home-page/home-page.component.html
@@ -1,2 +1,15 @@
-<!-- Home page -->
-<h1>Welcome Home :)</h1>
+<div id="intro">
+    <img [src]="assets('images/intro.jpg')" alt="Falak JS" />
+</div>
+
+<div id="helpful-links">
+    <div class="heading">Helpful link to kick off with</div>
+    <div id="links-list">
+        <a href="https://github.com/falakjs/Falak/wiki" target="_blank">Full documentation</a>
+        <a href="https://github.com/falakjs/falak/wiki/styling" target="_blank">Styling</a>
+        <a href="https://github.com/falakjs/falak/wiki/production" target="_blank">Production</a>
+        <a href="https://github.com/falakjs/falak/wiki/cli" target="_blank">CLI commands</a>
+        <a href="https://github.com/falakjs/falak/wiki/filesystem-structure" target="_blank">Filesystem structure</a>
+        <a href="https://github.com/falakjs/falak/wiki/packages" target="_blank">Available packages</a>
+    </div>
+</div>
