Added service worker

--- a/resources/content/src/blog/modules/home/components/home-page/home-page.component.html
+++ b/resources/content/src/blog/modules/home/components/home-page/home-page.component.html
@@ -3,7 +3,7 @@
 </div>
 
 <div id="helpful-links">
-    <div class="heading">Helpful link to kick off with</div>
+    <div class="heading">Helpful links to kick off with</div>
     <div id="links-list">
         <a href="https://github.com/falakjs/Falak/wiki" target="_blank">Full documentation</a>
         <a href="https://github.com/falakjs/falak/wiki/styling" target="_blank">Styling</a>
