--- a/resources/content/src/blog/modules/home/components/home-page/home-page.component.scss
+++ b/resources/content/src/blog/modules/home/components/home-page/home-page.component.scss
@@ -14,7 +14,7 @@
 
         a {
             margin-right: 1rem;
-            color: #999;
+            color: #ccc;
             font-weight: bold;
         }
     }
